# cmd/api/admin-api/docs/swagger.json
@@ -33,7 +33,7 @@
                 "operationId": "addAdminAccount",
                 "parameters": [
                     {
-                        "description": "管理员账户信息",
+                        "description": "添加管理员账户信息",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -232,6 +232,53 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/github_com_openimsdk_chat_pkg_common_apistruct.AdminLoginResp"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/account/search_admin": {
+            "post": {
+                "description": "搜索管理员账户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "搜索管理员账户",
+                "operationId": "searchAdminAccount",
+                "parameters": [
+                    {
+                        "description": "管理员账户搜索",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_openimsdk_chat_pkg_protocol_admin.SearchAdminAccountReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/apiresp.ApiResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/github_com_openimsdk_chat_pkg_protocol_admin.SearchAdminAccountResp"
                                         }
                                     }
                                 }
@@ -1823,6 +1870,17 @@
                 ],
                 "summary": "删除管理员账户",
                 "operationId": "delAdminAccount",
+                "parameters": [
+                    {
+                        "description": "删除管理员账户",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_openimsdk_chat_pkg_protocol_admin.DelAdminAccountReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1948,30 +2006,6 @@
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/apiresp.ApiResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/search_admin": {
-            "post": {
-                "description": "搜索管理员账户",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "搜索管理员账户",
-                "operationId": "searchAdminAccount",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -2307,6 +2341,17 @@
                 }
             }
         },
+        "github_com_openimsdk_chat_pkg_protocol_admin.DelAdminAccountReq": {
+            "type": "object",
+            "properties": {
+                "userIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "github_com_openimsdk_chat_pkg_protocol_admin.DelAppletReq": {
             "type": "object",
             "properties": {
@@ -2616,6 +2661,34 @@
                     "items": {
                         "$ref": "#/definitions/github_com_openimsdk_chat_pkg_protocol_admin.ApplicationVersion"
                     }
+                }
+            }
+        },
+        "github_com_openimsdk_chat_pkg_protocol_admin.SearchAdminAccountReq": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "pagination": {
+                    "$ref": "#/definitions/sdkws.RequestPagination"
+                }
+            }
+        },
+        "github_com_openimsdk_chat_pkg_protocol_admin.SearchAdminAccountResp": {
+            "type": "object",
+            "properties": {
+                "adminAccounts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_openimsdk_chat_pkg_protocol_admin.GetAdminInfoResp"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
