# internal/api/admin/start.go
@@ -81,7 +81,7 @@ func SetAdminRoute(router gin.IRouter, admin *Api, mw *chatmw.MW) {
 	adminRouterGroup.POST("/add_admin", mw.CheckAdmin, admin.AddAdminAccount)           // Add admin account
 	adminRouterGroup.POST("/add_user", mw.CheckAdmin, admin.AddUserAccount)             // Add user account
 	adminRouterGroup.POST("/del_admin", mw.CheckAdmin, admin.DelAdminAccount)           // Delete admin
-	adminRouterGroup.POST("/search", mw.CheckAdmin, admin.SearchAdminAccount)           // Get admin list
+	adminRouterGroup.POST("/search_admin", mw.CheckAdmin, admin.SearchAdminAccount)          // Get admin list
 	//account.POST("/add_notification_account")
 
 	importGroup := router.Group("/user/import")
